--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
+    //safe args
+    //navigation
+    id'androidx.navigation.safeargs.kotlin'
+    //data binding
+    id 'kotlin-kapt'
 }
 
 android {
@@ -31,7 +37,7 @@ android {
         jvmTarget = '1.8'
     }
 }
-
+def nav_version = "2.4.1"
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -41,4 +47,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+    //Navigation
+
+    // Kotlin
+    implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
+    implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 }
